--- a/maps/package.json
+++ b/maps/package.json
@@ -1,9 +1,10 @@
 {
   "devDependencies": {
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.4"
   },
   "dependencies": {
     "@types/faker": "^4.1.6",
+    "@types/googlemaps": "^3.37.7",
     "faker": "^4.1.0"
   }
 }
