--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,18 @@
 {
+  "name": "web",
+  "version": "1.0.0",
+  "description": "Web API utilizing TypeScript.",
+  "scripts": {
+    "start:db": "json-server -w db.json",
+    "start:parcel": "parcel index.html"
+  },
+  "keywords": [],
+  "author": "Martin Alexander Kretzschmar",
+  "license": "ISC",
   "devDependencies": {
     "typescript": "^3.7.5"
+  },
+  "dependencies": {
+    "axios": "^0.19.1"
   }
 }
